feat(api,spec): view profiles and search players
